[tool.poetry]
authors = ["checktheroads <matt@stellar.tech>"]
description = "Uptime & Latency Monitoring Responder for Orion"
license = "BSD 3 Clause Clear"
name = "responder"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.61.1"
gunicorn = "^20.0.4"
pydantic = "^1.7"
python = "^3.8"
uvloop = "^0.14.0"
uvicorn = {extras = ["standard"], version = "^0.12.2"}

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-docstrings = "^1.5.0"
flake8-isort = "^4.0.0"
isort = "^5.6.4"
mypy = "^0.790"
pep8-naming = "^0.11.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 88
